--- a/TypeAhead.html
+++ b/TypeAhead.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
+  <title>Type Ahead</title>
   <link rel="stylesheet" href="styleAhead.css">
 </head>
 <body>
